			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04y: *********************************

IMP/MAN: (9/12/06, GVG) 3 new dummy layers in TSMC90. RPDMY was added into rpo poly resistors.

BUG: (9/12/06, GVG) More fixes for foundry setting and project settings.

BUG: (9/12/06, SMR) Going up hierarchy may show wrong export (Bug #1217).
FIX: In EditWindow.upHierarchy() change history if port is selected.

BUG: (9/12/06, SMR) Fixed Silicon Compiler to show results; fixed compile
     bug in Routing Preferences; fixed Splash screen in MDI mode; removed
     separate TSMC180 gate generation.

BUG: (9/11/06, GVG) drc missing metal notch violations (bug #1145)
FIX: Attempts to fix #483 broke the notch violations.

************************* Version 8.04x: *********************************

IMP: (9/11/06, JKG) Added import/export command for project settings,
removed "write to disk" button from dialog

IMP: (9/11/06, GVG) Changes to define selected foundry for MoCMOS and TSMC90 independently.

BUG: (9/11/06, DN) Exception when renaming library (Bug #1216).
FIX: In Cell.update don't reuse old NodeInst when node prototype changed. 

IMP: (9/8/06, SMR) Redid Display Control Preferences to indicate status of algorithms.

BUG: (9/8/06, GVG) Few issues with Technology preferences stored as project settings.
     Also fixing a PolyBase bug affecting extraction code.
FIX: Making sure TechPref.technologyChanged is called properly.

BUG: (9/8/06, SMR) Crash when reading HSpice measurement files (Bug #1214).
FIX: Improved HSpiceOut.addMeasurementData() to handle all files.

IMP: (9/7/06, SMR) Removed "Easy Selection of Annotation Text" from Selection Preferences
     (It was never used...just an idle checkbox that does nothing).

BUG: (9/7/06, GVG) Switching of metal numbers in TSMC90 was not working since proj preferences were introduced